syntax = "proto3"; // This is the version of the protocol buffer language

// namespace for the generated C# code
option csharp_namespace = "Auth.Shared.Protos.GrpcUserService";

// The service definition
service UserService{
  rpc GetIdByUsername (UserRequest) returns (UserResponse);
}

message UserRequest {
  string username = 1;
}

message UserResponse {
  string id = 1;
}